<resources>
    <string name="app_name">欧乐</string>
    <string name="ocr_title">欧乐银联安装中...</string>
    <string name="ocr_title_success">欧乐银联安装成功</string>
    <string name="me">我</string>
    <string name="okline_user_id">欧乐会员号：1111111111</string>
    <string name="my_ocard">我的欧卡</string>
    <string name="my_pos">我的POS</string>
    <string name="my_jifen">积分交易</string>
    <string name="my_assets">资产分析</string>
    <string name="my_devices">我的设备</string>
    <string name="my_wealth">我的财富</string>
    <string name="my_style">我的风格</string>
    <string name="black">黑色</string>
    <string name="pink">粉色</string>
    <string name="usual">常用色</string>
    <string name="tab_record">记录</string>
    <string name="tab_contacts">通讯录</string>
    <string name="tab_app">App</string>
    <string name="tab_card">卡证</string>
    <string name="card_main_title">卡证</string>
    <string name="card_tab_common">常用</string>
    <string name="card_tab_member">会员</string>
    <string name="card_tab_bank">银行</string>
    <string name="card_tab_work">工作</string>
    <string name="card_tab_certificates">证件</string>
    <string name="card_tab_access">门禁</string>
    <string name="contacts_title">通讯录</string>
    <string name="contacts_text_complete_card">（请完善“我的名片”）</string>
    <string name="title_chat_search">聊天</string>
    <string name="title_gather">收款</string>
    <string name="yesterday">昨天</string>
    <string name="text_refresh_contact">刷新通讯录</string>
    <string name="text_add_contact">添加联系人</string>
    <string name="text_add_card">添加名片</string>
    <string name="text_create_group">创建群</string>
    <string name="text_gathering">收款</string>
    <string name="text_scanning">扫一扫</string>
    <string name="item_gather_money">收款金额：%s</string>
    <string name="item_gather_account">收款账户：%s</string>
    <string name="item_gather_from_account">对方账户：%s</string>
    <string name="item_gather_date">收款时间：%s</string>
    <string name="text_real_name">实名：%s</string>
    <string name="text_confirm_delete">确定删除吗？</string>
    <string name="exit_group_success">退出群聊成功</string>
    <string name="request_data_failure">获取数据失败!</string>
    <string name="contact_save_failure">联系人保存失败!</string>
    <string name="title_new_email">新邮件</string>
    <string name="title_dial">通话</string>
    <string name="title_add_contact">添加联系人</string>
    <string name="notice_addCon_success_forVip">添加成功,已发送好友验证</string>
    <string name="notice_addCon_success">添加成功</string>
    <string name="title_new_friend">新的朋友</string>
    <string name="text_save_card">保存名片</string>
    <string name="ipss8_relationship">关系：%s</string>
    <string name="ipss8_connection">连接中…</string>
    <string name="ipss8_almost_quit">通话即将结束…</string>
    <string name="ipss8_safe_calling">您已进入安全通话中</string>
    <string name="cannot_import_contacts">无法导入通讯录</string>
    <string name="notVip_call_chat">对方不是欧乐会员,无法使用安全通讯功能</string>
    <string name="notVip_call_chat_dial">对方不是我们OLAPP用户</string>
    <string name="notTrusted_email_deliver">你还不是对方的好友,无法使用此功能,是否发送好友请求?</string>
    <string name="abandon_save_card">确定放弃本次添加名片吗?</string>
    <string name="notVIP_email_delivery">对方不是欧乐会员,无法使用此功能,是否邀请对方使用欧乐银联APP?</string>
    <string name="ipss8_init_failed">初始化失败，读取不到认证文件，是否调用系统电话?</string>
    <string name="notVip_negative_text">邀请对方</string>
    <string name="notVip_negative_text_dial">推送OLAPP下载链接</string>
    <string name="invite_use_oule">邀请您成为欧乐会员，请在欧乐银联App中进行实名认证，与您的好友亲密互动！
        下载地址：http://t.cn/RajOFqQ
</string>
    <string name="can_not_talk_yourself">不能和自己聊天</string>
    <string name="notVip_positive_chat_text">转系统短信</string>
    <string name="notVip_positive_call_text">转系统电话</string>
    <string name="notVip_local_dial">本地拨号</string>
    <string name="notVip_local_text">本地短信</string>
    <string name="dialog_positive">是</string>
    <string name="dialog_negative">否</string>
    <string name="rz_tip1">为确保欧乐银联的使用者是你本人,需进行身份认证</string>
    <string name="rz_tip2">1.身份确认</string>
    <string name="rz_tip">2.身份确认</string>
    <string name="rz_tip3">请手持身份证，将头像和身份证对准虚线框进行自拍</string>
    <string name="rz_tip7">请对准身份证</string>
    <string name="rz_tip8">请对准头像和身份证</string>
    <string name="sure">确认</string>
    <string name="rz_tip4">请右手持身份证,对准头像和身份证进行自拍</string>
    <string name="rz_tip5">请确保人的五官清晰可见，身份证信息清晰可见</string>
    <string name="rz_tip6">请按示意图将身份证放在取景框内拍摄</string>
    <string name="take_photo">开始拍摄</string>
    <string name="btn_next">下一步</string>
    <string name="btn_repic">重拍</string>
    <string name="tip1">2.一会儿就</string>
    <string name="tip2">啦</string>
    <string name="tip3">身份确认失败！</string>
    <string name="tip4">失败原因:%s</string>
    <string name="tip5">重新拍摄</string>
    <string name="tip6">放弃认证</string>
    <string name="again_submit">重新认证</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nonavailable">无</string>
    <string name="online">不在线</string>
    <string name="ocard_attatch_step">开始关联欧卡</string>
    <string name="ocard_attatch_step1">1.检测手机NFC</string>
    <string name="ocard_attatch_step2">1.检测手机蓝牙</string>
    <string name="ocard_attatch_step3">2.长按欧卡电源键3秒，直到蓝灯闪烁</string>
    <string name="ocard_attatch_step4">4.请将欧卡紧贴手机背面</string>
    <string name="ocard_attatch_step5">&#160;&#160;欧卡卡号：1234567890123456</string>
    <string name="ocard_attatch_step5_attaching">4.正在关联欧卡</string>
    <string name="ocard_attatch_success">恭喜您，欧卡关联成功</string>
    <string name="ocard_attatch_fail">欧卡关联失败</string>
    <string name="ocard_attatch_on_fail">重新关联</string>
    <string name="ocard_attatch_enter_no">3.请在两分钟内输入卡号后六位</string>
    <string name="tip7">没有摄像头什么都做不了</string>
    <string name="tip8">请打开存储权限，确保app正常运行</string>
    <string name="tip9">捕获照片失败</string>
    <string name="tip10">用户名</string>
    <string name="tip11">密码</string>
    <string name="tip12">登录</string>
    <string name="tip13">注册</string>
    <string name="tip14">添加好友</string>
    <string name="success_register">注册成功</string>
    <string name="fail_register">注册失败</string>
    <string name="success_login">登录成功</string>
    <string name="fail_login">登录失败</string>
    <string name="success_add">添加成功</string>
    <string name="fail_add">添加失败</string>
    <string name="exit">退出</string>
    <string name="my_app">我的APP</string>
    <string name="enter_apppool_tip">进入后选择您需要的APP</string>
    <string name="apppool">APP POOL</string>
    <string name="no_app">暂无 APP</string>
    <string name="new_app">最新上架</string>
    <string name="apptype">APP/卡类别</string>
    <string name="app_card">便捷开卡</string>
    <string name="app_update">待更新项目（</string>
    <string name="update_manage">更新管理</string>
    <string name="all_update">全部更新</string>
    <string name="update">更新</string>
    <string name="app_search_result">搜索结果（</string>
    <string name="no_search_result">无匹配数据</string>
    <string name="hot_app">热门应用</string>
    <string name="add_star">加星标</string>
    <string name="cancel_star">取消星标</string>
    <string name="add_delete">删除</string>
    <string name="edittext_hint">输入手机号、姓名的关键字</string>
    <string name="bad_network_tip">网络不给力，请稍后重试</string>
    <string name="bad_network_tip_cancel">取消</string>
    <string name="bad_network_tip_try">重试</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="absence_declaration">挂失</string>
    <string name="ocard_resume">重启</string>
    <string name="apply_new">补新卡</string>
    <string name="ocad_tips">欧卡丢失请立即挂失。挂失后，一个月内找回欧卡可进行重启欧卡；如超过一个月，则此欧卡自动作废。</string>
    <string name="absence_declaration_confirm">确定要挂失吗？</string>
    <string name="ocard_resume_confirm">重启需要重新认证身份</string>
    <string name="apply_new_confirm">挂失后一个月才能申请补发新卡</string>
    <string name="search">搜索结果( %s )</string>
    <string name="title_contact_detal">详细资料</string>
    <string name="title_my_card">我的名片</string>
    <string name="title_my_deliveryinfo">我的快递信息</string>
    <string name="title_deliveryinfo">快递信息</string>
    <string name="title_choose_bank">选择银行</string>
    <string name="title_add_card">添加名片</string>
    <string name="title_my_other_phone">我的其他电话</string>
    <string name="title_other_connection">其他通信方式</string>
    <string name="title_my_work_card">我的工作名片</string>
    <string name="title_work_card">工作名片</string>
    <string name="title_my_account_information">我的帐号信息</string>
    <string name="title_add_account_information">帐号信息</string>
    <string name="title_edit_address">编辑地址</string>
    <string name="card_empty">您还没有任何%s卡</string>
    <string name="card_empty_desc">请点击底部菜单的APP，前往APP&#8194;POOL，选择您需要的APP，下载安装后进行开卡，或者直接选择卡片进行开卡.</string>
    <string name="my_center">我的</string>
    <string name="choose_contact">选择联系人</string>
    <string name="title_gathering">收款</string>
    <string name="title_edit_remark">备注名</string>
    <string name="title_swat">重拍</string>
    <string name="rz_tip_one">1.身份确认</string>
    <string name="record_search_hint">请输入搜索内容</string>
    <string name="text_record_search_empty_key_alert">请输入需要搜索的关键字</string>
    <string name="item_gather_waiting">收款中</string>
    <string name="card_search">搜索结果（%s）</string>
    <string name="card_balance">卡内余额：%s</string>
    <string name="card_integral">卡内积分：%d</string>
    <string name="card_pay_tip">提示:使用当前卡时请勿锁屏或退出APP</string>
    <string name="card_pay_success">本次交易</string>
    <string name="card_pay_discount">积分抵扣：%s</string>
    <string name="card_pay_balance">余额支付：%s</string>
    <string name="card_pay_bank">支付：¥%s</string>
    <string name="card_no_balance">余额不足!</string>
    <string name="card_recharge_1">¥100.00</string>
    <string name="card_recharge_2">¥200.00</string>
    <string name="card_recharge_3">¥300.00</string>
    <string name="card_no_recharge">暂不充值</string>
    <string name="card_now_recharge">立即充值</string>
    <string name="card_log_latest">最近记录</string>
    <string name="card_set_default">默认</string>
    <string name="card_pay">刷卡</string>
    <string name="card_log_pos">POS单</string>
    <string name="card_log_invoice">发票</string>
    <string name="card_log_ticket">小票</string>
    <string name="card_log_title">消费清单</string>
    <string name="card_over_time">网络不给力，请稍后重试</string>
    <string name="card_cardNo">•&#32;•&#32;•&#32;• %s</string>
    <string name="card_pay_rmb">¥%s</string>
    <string name="card_app_open_tip">现在要安装%sAPP么?</string>
    <string name="card_recharge_no_card">卡片信息有误，无法充值</string>
    <string name="card_orderDesc">充值%s元</string>
    <string name="card_recharge_select_money">请选择充值金额</string>
    <string name="card_member_pay_fail">该卡不能用于本次支付</string>
    <string name="card_no_balance_1">余额不足</string>
    <string name="card_rmb">¥</string>
    <string name="card_recharge_tip">暂无快捷充值银行卡</string>
    <string name="card_notice_exit">点击卡片退出</string>
    <string name="ocard_no">&#160;&#160;&#160;欧卡卡号后六位:</string>
    <string name="record">记录</string>
    <string name="no_record_alarm">您选择的日期内无交易记录</string>
    <string name="merchant_stub">商户存根</string>
    <string name="merchant_warn">请妥善保管</string>
    <string name="merchant_name">商户名:%s</string>
    <string name="merchant_number">商户号:%s</string>
    <string name="terminal_number">终端号:%s</string>
    <string name="operator_number">操作员:%s</string>
    <string name="card_issuing_bank">发卡银行:%s</string>
    <string name="acquiring_bank">收单银行:%s</string>
    <string name="trans_type">交易类型:%s</string>
    <string name="card_bank_num">卡号:</string>
    <string name="serial_number">中心流水:%s</string>
    <string name="trans_date">交易时间:%s</string>
    <string name="period_validity">有效日期:%s</string>
    <string name="batch_number">批次号:%s</string>
    <string name="voucher_number">凭证号:%s</string>
    <string name="authorization_number">授权号:%s</string>
    <string name="amount_money">金额:</string>
    <string name="cardholder_signature">持卡人签名</string>
    <string name="pos_hint">本人确认以上交易，同意将其记入本卡账户</string>
    <string name="pos_remark">备注：%s</string>
    <string name="gather_success_text">收款成功！</string>
</resources>