<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hx_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vboss.okline.ui.record.HxTestActivity">
    <EditText
        android:id="@+id/et_main_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip10" />

    <EditText
        android:id="@+id/et_main_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip11"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/tip12" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip13"/>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip14"/>


</LinearLayout>
