<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <TextView android:id="@+id/tv_style_text"
        style="@style/tv_style"
        android:layout_marginTop="@dimen/d_7"
        android:text="@string/rz_tip1"
        android:textColor="@color/c_FE6700"
        android:visibility="gone"
        android:textSize="13sp" />

    <TextView android:id="@+id/tv_step"
        style="@style/tv_style"
        android:layout_marginTop="@dimen/d_14"
        android:layout_marginBottom="@dimen/d_14"
        android:text="@string/rz_tip7"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView android:id="@+id/tv_info"
        style="@style/tv_style"
        android:layout_marginBottom="@dimen/d_7"
        android:layout_marginTop="@dimen/d_7"
        android:text="@string/rz_tip6"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <ImageView android:id="@+id/iv_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/prompt_img"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button  android:id="@+id/take_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/take_photo_btn"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            />
    </LinearLayout>


</LinearLayout>
