<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/background_add"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_refresh"
        android:layout_width="@dimen/dialog_add_width"
        android:layout_height="@dimen/contact_dialog_add_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/contacts_addphone" />-->

        <TextView
            style="@style/Contacts_add_dialog_textView"
            android:text="@string/text_add_card"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bg_preferences" />

    <LinearLayout
        android:id="@+id/ll_create_group"
        android:layout_width="@dimen/dialog_add_width"
        android:layout_height="@dimen/contact_dialog_add_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/contacts_creat" />-->

        <TextView
            style="@style/Contacts_add_dialog_textView"
            android:text="@string/text_create_group" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bg_preferences" />

    <LinearLayout
        android:id="@+id/ll_gathering"
        android:layout_width="@dimen/dialog_add_width"
        android:layout_height="@dimen/contact_dialog_add_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/contacts_kaoyikao" />-->

        <TextView
            style="@style/Contacts_add_dialog_textView"
            android:text="@string/text_scanning"
             />
    </LinearLayout>

</LinearLayout>